examples/test/testpolicy8033.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8033
  namespace: namespace17
spec:
  podSelector:
    matchLabels:
      key17: value37
      key2: value6
      key22: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value29
          key32: value17
      podSelector:
        matchLabels:
          key10: value25
          key36: value13
